2009-03-15  Nicolas François  <nicolas.francois@centraliens.net>

	* src/usermod.c: get_number() replaced by getlong().
	* src/usermod.c: When the user is renamed, make sure we do not
	override an user with the same name (in passwd or shadow).

2009-03-15  Nicolas François  <nicolas.francois@centraliens.net>

	* src/gpasswd.c: log_gpasswd_success_gshadow is in the cleanup
	stack only when the shadow group file is present.

2009-03-15  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/userdel.c: Make sure the user exists in the shadow
	database before calling spw_remove().
	* NEWS, src/userdel.c: When the user's group is removed, make sure
	the group is in the gshadow database before calling sgr_remove().
	* src/userdel.c: Improve warning's wording.

2009-03-15  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/cleanup.c: Fix del_cleanup. The arguments were not
	desynchronized with the cleanup functions.
	* libmisc/cleanup.c: cleanup_function_args is an array of void
	pointer, not strings.

2009-03-15  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/find_new_gid.c: Fix find_new_gid() the current group
	database was not taken into account.

2009-03-15  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/addgrps.c: Fix compilation warnings.

2009-03-14  Nicolas François  <nicolas.francois@centraliens.net>

	* man/po/Makefile.in.in: xml2po cannot exclude one entity for
	expansion. Make sure config.xml does not exist when the POT file
	is created in order to keep the configurations in the POT file
	* man/generate_translations.mak: make sure config.xml does not
	exist neither when the translated XML is generated. Add the
	missing %config; (strip out by xml2po). and make sure config.xml
	is present when the translated manpage is generated.
	* man/generate_mans.mak: config.xml is needed for the generation
	of manpages (already in the .deps for the English manpages, but
	needed for the translations).